--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,7 +1,31 @@
+@import "/src/scss/base/reset";
+
+
+
 body{
-    background-color: rgb(190, 233, 140);
-    font-size: 4rem;
+    background-color: #050505;
+
+    main {
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        
+
     
+    
+    .main-wrapper {
+        height: 30vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .img {
+            height: 30vh;
+        }
+
+
+    }
+}
 }
 
 
