--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -35,7 +35,7 @@ body {
       align-items: center;
       justify-content: center;
   
-      .hand {
+      .min-pointer, .sec-pointer {
         position: absolute;
         background-color: #333;
         transform-origin: 50% 100%;
@@ -45,7 +45,7 @@ body {
         height: 50%;
       }
   
-      .second-hand {
+      .sec-pointer {
         height: 1px;
         background-color: red;
       }
