--- a/src/scss/pages/_visual.scss
+++ b/src/scss/pages/_visual.scss
@@ -1,44 +1,37 @@
-
-  
 body {
-    height: 100vh;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-   
-  }
-  
+  height: 100vh;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+#timer-wrapper {
+  width: 15%;
+  height: 0vh;
+  background-color: #53085a;
+  overflow: hidden;
+  position: relative;
+}
 
-  #timer-wrapper {
-    width: 15%;
-    height: 70vh; 
-    background-color: #53085a;
-    overflow: hidden; 
-    position: fixed; 
-  }
-  
-  #timer-container {
-    width: 250px;   
-    height: 0;     
-    background-color: #53085a;
-    transition: height 5s linear; 
-    position: absolute; 
-    top: 0; 
-    bottom: auto; 
-  }
-  
+#timer-container {
+  width: 20px;
+  height: 0;
+  background-color: #53085a;
+  transition: height 5s linear;
+  position: absolute;
+  top: 0;
+  bottom: auto;
+}
 
-  
-  #controls-wrapper {
-    margin-top: 80vh; 
-    display: flex;
-    flex-direction: column; 
-    align-items: center;
-  }
-  
-  #durationInput {
-    margin-bottom: 10px; 
-  }
+#controls-wrapper {
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#durationInput {
+  margin-bottom: 10px;
+}
