--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -31,10 +31,11 @@ body {
       height: 15rem;
       background-color: #f0f0f0;
       border-radius: 50%;
-      border: 6px solid #333;
+      border: 4px solid #333;
       display: flex;
       align-items: center;
       justify-content: center;
+      border-style: dotted;
   
       .min-pointer, .sec-pointer {
         position: absolute;
