--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -31,11 +31,9 @@ body {
       height: 15rem;
       background-color: #f0f0f0;
       border-radius: 50%;
-      border: 4px solid #333;
       display: flex;
       align-items: center;
       justify-content: center;
-      border-style: dotted;
   
       .min-pointer, .sec-pointer {
         position: absolute;
@@ -53,7 +51,7 @@ body {
         bottom: 50%;
         left: 50%;
         transform-origin: bottom;
-        background-color: rgb(210, 32, 32);
+        background-color: #333;
         height: 50%;
 /*         transition: transform 0.5s cubic-bezier(0.4, 2.1, 0.5, 1);
  */      }
