--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,5 +1,6 @@
 @import "/src/scss/base/reset";
 @import "./components/dropdown";
+@import "./components/header";
 
 
 
@@ -28,5 +29,6 @@ body{
     }
 }
 }
+
 
 
