--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -1,15 +1,20 @@
-nav{
-    display: flex;
-    justify-content: center;
-    
-    
-    li {
-        list-style-type: none;
-        
-        a{
-            color: grey;
-            text-decoration: none;
-        }
-    }
+nav {
+  display: flex;
+  justify-content: center;
+  background-color: white;
+  padding: 2rem;
 
+  ul {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+    li {
+      list-style-type: none;
+
+      a {
+        color: grey;
+        text-decoration: none;
+      }
+    }
+  }
 }
