--- a/src/scss/pages/_visual.scss
+++ b/src/scss/pages/_visual.scss
@@ -1,37 +1,29 @@
 body {
-  height: 100vh;
-  margin: 0;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  height: 100vh;
+  margin: 0;
+  flex-direction: column;
 }
 
-#timer-wrapper {
-  width: 15%;
-  height: 0vh;
-  background-color: #53085a;
+#timer-container {
+  width: 200px;
+  height: 300px;
+  border: 1px solid #000;
   overflow: hidden;
   position: relative;
 }
 
-#timer-container {
-  width: 20px;
-  height: 0;
-  background-color: #53085a;
-  transition: height 5s linear;
-  position: absolute;
-  top: 0;
-  bottom: auto;
+#timer {
+  height: 0%;
+  background-color: #4b4848;
+  transition: height 1s linear; /* Adjust the duration here */
 }
 
-#controls-wrapper {
-  margin-top: 20px;
+#timeInput {
   display: flex;
   flex-direction: column;
-  align-items: center;
-}
-
-#durationInput {
-  margin-bottom: 10px;
+  margin-top: 20px;
+  text-align: center;
 }
