testing bell svg

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -25,6 +25,10 @@ body{
         flex-direction: column;
         
 
+        .alarm-container {
+           
+        }
+
 
         .img {
             height: 30vh;
