--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,27 +1,3 @@
-import 
+@import 'pages/settimer';
 
-
-#timers-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-  }
-  
-  #timer-container {
-    display: flex;
-    align-items: center;
-    font-size: 2em;
-    margin-bottom: 10px;
-  
-    div {
-      margin: 0 5px;
-    }
-  }
-  
-  button {
-    padding: 10px;
-    font-size: 1em;
-    margin: 5px;
-  }
   
