--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,31 +4,30 @@
 
 body{
     background-color: #050505;
+    height: 100vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
 
     main {
+        width: 20rem;
+        height: 20rem;
         display: flex;
         justify-content: center;
         flex-direction: column;
-        
-
-    
-    
-    .main-wrapper {
-        height: 30vh;
+        text-align: center;
+        align-items: center;
         color: #FFFFFF;
         font-weight: 700;
         font-size: large;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        flex-direction: column;
+        border-radius: 50%;
+        box-shadow:
+        0 0 10px 5px #fff,
+        0 0 20px 10px #00f,
+        0 0 30px 15px #0f0,
+        0 0 40px 20px #f00;
         
-
-        .alarm-container {
-           
-        }
-
 
         .img {
             height: 30vh;
@@ -37,6 +36,6 @@ body{
 
     }
 }
-}
+
 
 
