--- a/src/scss/pages/_settimer.scss
+++ b/src/scss/pages/_settimer.scss
@@ -19,11 +19,21 @@ body{
     align-items: center;
     justify-content: flex-end;
 
-    
-    #timers-container {display: flex;
+    #logoImage{
+        margin-bottom: 10.5rem;
+        margin-right: 14rem;
+        cursor: pointer;
+        
+    }
+
+    #checkboxes{
+        font-size: 20px;
+    }
+    #timers-container {
+        display: flex;
         justify-content: center;
-      align-items: center;
-      font-size: 4rem;
+        align-items: center;
+        font-size: 4rem;
     
       button{
         border: none;
