--- a/src/scss/pages/_analog.scss
+++ b/src/scss/pages/_analog.scss
@@ -6,7 +6,59 @@
   
   
   body {
-    background-color: aqua;
-    // Här kan du lägga till andra stilar för body om det behövs
+    font-family: Arial, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #f5eeee;
+  
+    .timer-section {
+      margin-bottom: 20px;
+      text-align: center;
+  
+      label {
+        display: block;
+        margin-bottom: 5px;
+      }
+  
+      select, button {
+        padding: 8px;
+        margin: 5px;
+      }
+    }
+  
+    .clock {
+      position: relative;
+      width: 15rem;
+      height: 15rem;
+      background-color: #f0f0f0;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+  
+      .min-pointer, .sec-pointer {
+        position: absolute;
+        bottom: 50%;
+        left: 50%;
+        background-color: #333;
+        transform-origin: bottom;
+        transform: rotateZ(0deg);
+/*         transition: transform 0.5s cubic-bezier(0.4, 2.1, 0.5, 1);
+ */     width: 2px;
+        height: 50%;
+      }
+  
+      .sec-pointer {
+        bottom: 50%;
+        left: 50%;
+        transform-origin: bottom;
+        background-color: #333;
+        height: 50%;
+/*         transition: transform 0.5s cubic-bezier(0.4, 2.1, 0.5, 1);
+ */      }
+    }
   }
   
