--- a/src/scss/pages/_settimer.scss
+++ b/src/scss/pages/_settimer.scss
@@ -29,7 +29,7 @@ body{
     #checkboxes{
         font-size: 20px;
     }
-    #timers-container {
+    #settimers-container {
         display: flex;
         justify-content: center;
         align-items: center;
