added settimer into dropdown menu

--- a/src/scss/pages/_settimer.scss
+++ b/src/scss/pages/_settimer.scss
@@ -1,3 +1,9 @@
+.timer-content {
+    display: none;
+  
+    // Additional styles for hidden timers can be added here
+  }
+
 body{
     background-color: rgb(176, 176, 245);
     display: flex;
