--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -4,8 +4,12 @@ header {
 
 
 .logo-box {
-    position: absolute;
+    position: relative;
     top: 20px;
-    left: 20px;
+    left: 100px;
     cursor: pointer;
+}
+
+nav{
+    position: absolute;
 }
