--- a/src/scss/pages/_settimer.scss
+++ b/src/scss/pages/_settimer.scss
@@ -11,6 +11,9 @@ body{
     flex-direction: column;
     align-items: center;
     height: 100vh;
+    width: 800px;
+    margin: auto;
+    border: 1px solid black;
     
     
 }
