--- a/src/scss/pages/_visual.scss
+++ b/src/scss/pages/_visual.scss
@@ -3,7 +3,8 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
-  margin: 0;
+  width: 800px;
+  margin: auto;
   flex-direction: column;
 }
 
