--- a/src/scss/pages/_digital.scss
+++ b/src/scss/pages/_digital.scss
@@ -1,5 +1,18 @@
-.timer{
 
-    color: aqua;
+
+.digitalContainer{
+background-color: rgb(237, 13, 13);
+align-items: center;
+}
+
+#abortTimer{
+
+    justify-content:baseline;
+    
+}
+
+body{
+
+    background-color: beige;
 
 }
