--- a/src/scss/pages/_dropdown.scss
+++ b/src/scss/pages/_dropdown.scss
@@ -17,7 +17,13 @@
       }
     }
   }
+  nav{
+    display: none;
   
+    &.show {
+      display: flex;
+    }
+  }
 
   #analogTimer {
      display: none;
