--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,8 +5,8 @@ header {
 
 .logo-box {
     position: relative;
-    top: 20px;
-    left: 100px;
+    bottom: 120px;
+    right: 110px;
     cursor: pointer;
 }
 
