--- a/src/scss/pages/_visual.scss
+++ b/src/scss/pages/_visual.scss
@@ -13,7 +13,7 @@ body {
   height: 300px;
   border: 1px solid #000;
   overflow: hidden;
-  position: relative;
+  /* position: relative; */
 }
 
 #timer {
