--- a/src/scss/pages/_settimer.scss
+++ b/src/scss/pages/_settimer.scss
@@ -3,9 +3,9 @@
   
     // Additional styles for hidden timers can be added here
   }
-
+// behåll denna body , vi styr all body scss här
 body{
-    background-color: rgb(176, 176, 245);
+    background-color: rgb(51, 207, 56);
     display: flex;
     justify-content: center;
     flex-direction: column;
