--- a/src/scss/pages/_settimer.scss
+++ b/src/scss/pages/_settimer.scss
@@ -20,15 +20,11 @@ body {
 }
 
 main {
-
     height: 100vh;
     width: 800px;
-    border: 2px solid black;
     display: flex;
-
     justify-content: center;
     align-items: center;
-
 }
 
 .logo {
@@ -39,6 +35,7 @@ main {
 }
 
 .poster {
+    border-radius: 50px;
     width: 100%;
     height: fit-content;
     display: flex;
