--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -16,6 +16,7 @@ nav {
     flex-direction: column;
     gap: 2.5rem;
     text-align: center;
+    margin-left: 6rem;
     li {
       list-style-type: none;
 
