--- a/src/scss/pages/_settimer.scss
+++ b/src/scss/pages/_settimer.scss
@@ -6,6 +6,7 @@
 
 // behåll denna body , vi styr all body scss här
 body {
+    font-family: 'Quicksand';
     background-color: #d7d7d7;
     background-image: linear-gradient(147deg, #e0dada 0%, #302e2eda 74%);
     display: flex;
@@ -30,8 +31,6 @@ main {
 .logo {
     width: 3rem;
     height: auto;
-
-
 }
 
 .poster {
@@ -52,8 +51,9 @@ main {
         opacity: 0;
         transform: translateX(0%);
     }
-    50% {
-    }
+
+    50% {}
+
     to {
         opacity: 1;
         transform: translateX(0%)
@@ -61,14 +61,15 @@ main {
 }
 
 #app-container {
-    width: 16rem;
-    height: 450px;
+    width: 100%;
+    height: 50vh;
     padding: 1rem;
-    border: 2px solid black;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-end;
+    border: 2px solid black;
+    border-radius: 20px;
 
     #checkboxes {
         font-size: 20px;
@@ -92,12 +93,21 @@ main {
 
 }
 
-#startButton {
-    background-color: rgb(176, 176, 245);
-    margin-top: 20px;
-    padding: 1rem;
-    border-radius: 10px;
-    border: 2px solid black;
-    font-size: 2rem;
+#startButton {  
+    background-color: #000000;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #FFFFFF;
     cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    line-height: normal;
+    margin: 3rem;
+    min-height: 60px;
+    min-width: 0;
+    outline: none;
+    padding: 1rem;
+    width: 50%;
+    
 }
