--- a/src/scss/pages/_visual.scss
+++ b/src/scss/pages/_visual.scss
@@ -1,15 +1,16 @@
 
 #timer-container {
-  width: 200px;
+  width: 240px;
   height: 400px;
-  border: 1px solid #000;
+  border: 7px solid;
+  border-radius: 2rem;
   overflow: hidden;
   /* position: relative; */
 }
 
 #timer {
   height: 0%;
-  background-color: #4b4848;
+  background-image: linear-gradient(147deg, #e0dada 0%, #302e2eda 74%);
   transition: height 1s linear; /* Adjust the duration here */
 }
 
@@ -19,4 +20,40 @@
   justify-content: flex-start;
   align-items: center;
   text-align: center;
+  gap: 5px;
+}
+
+#startButtonVisual{
+  background-color: #000000;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0rem;
+    min-height: 50px;
+    width: 50%;
+    outline: none;
+    padding: 0rem;
+    
+}
+#stopButtonVisual{
+  background-color: #000000;
+    border: 2px solid #1A1A1A;
+    border-radius: 15px;
+    box-sizing: border-box;
+    color: #FFFFFF;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 600;
+    line-height: normal;
+    margin: 0rem;
+    min-height: 50px;
+    width: 50%;
+    outline: none;
+    padding: 0rem;
+    
 }
