--- a/src/scss/pages/_digital.scss
+++ b/src/scss/pages/_digital.scss
@@ -16,7 +16,13 @@ align-items:center;
 }
 
 body{
-
-    background-color: beige;
+    
+        font-family: Arial, sans-serif;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        background-color: #f5eeee;
 
 }
