--- a/src/scss/pages/_analog.scss
+++ b/src/scss/pages/_analog.scss
@@ -15,15 +15,11 @@
       margin-bottom: 20px;
       text-align: center;
       
-
-    
       
-      
-  
       label {
         display: block;
-        margin-bottom: 5px;
-        
+        margin-bottom: 20px;
+        font-size: 1.5rem;
         
       }
   
