timesuo rdy for merge

--- a/src/scss/pages/_timesup.scss
+++ b/src/scss/pages/_timesup.scss
@@ -1,12 +1,10 @@
 body{
-    background-color: #050505;
-    height: 100vh;
-    display:flex;
-    justify-content: center;
-    align-items: center;
+    
+    
     
 
-    main {
+    .alarm-wrapper {
+        background-color: #050505;
         width: 14rem;
         height: 14rem;
         display: flex;
