--- a/src/scss/pages/_digital.scss
+++ b/src/scss/pages/_digital.scss
@@ -1,20 +1,4 @@
 
-
-.digitalContainer{
-display: flex;
-flex-direction: column;
-background-color: rgb(237, 13, 13);
-align-items:center;
-
-}
-
-#abortTimer{
-
-    justify-content:end;
-    align-items: end;
-    
-}
-
 body{
     
         font-family: Arial, sans-serif;
@@ -24,5 +8,30 @@ body{
         justify-content: center;
         height: 100vh;
         background-color: #f5eeee;
+        font-size: xx-large;
+        
+
+.digitalContainer{
+    display: flex;
+    border: red;
+    
+    flex-direction: column;
+    background-color: rgb(0, 0, 0);
+    align-items: center;
+    border: rgb(211, 32, 32);
+    border-width: 15;
+    color: #f5eeee;
+    height: 30vh;
+    width: 30vh;
+    }
 
 }
+.buttons{
+    flex-wrap: wrap;
+    #starttimer{
+        background-color: aqua;
+    }
+}    
+    #abortTimer{
+    
+    }
