--- a/src/scss/pages/_digital.scss
+++ b/src/scss/pages/_digital.scss
@@ -14,7 +14,7 @@ body{
 .digitalContainer{
     display: flex;
     border: red;
-    
+    gap: 3rem;
     flex-direction: column;
     background-color: rgb(0, 0, 0);
     align-items: center;
@@ -23,6 +23,7 @@ body{
     color: #f5eeee;
     height: 30vh;
     width: 30vh;
+
     }
 
 }
