--- a/src/scss/components/_buttons.scss
+++ b/src/scss/components/_buttons.scss
@@ -39,4 +39,24 @@
 }
 
 
+
+#pauseVisual{
+  
+  width: 50%;
+  cursor: pointer;
+ 
+}
+
+#stopButtonVisual{
+  
+  width: 50%;
+  cursor: pointer;
+}
+
+#startButtonVisual{
+  
+  width: 50%;
+  cursor: pointer;
+}
+
   
