--- a/src/scss/pages/_visual.scss
+++ b/src/scss/pages/_visual.scss
@@ -1,6 +1,9 @@
-/* #visual-container{
+#visual-container{
 display: flex;
-} */
+flex-direction: column;
+align-items: center;
+gap: 0.5rem;
+}
 #timer-container {
   width: 240px;
   height: 400px;
@@ -25,37 +28,10 @@ display: flex;
   gap: 5px;
 }
 
-#startButtonVisual{
-  background-color: #000000;
-    border: 2px solid #1A1A1A;
-    border-radius: 15px;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 600;
-    line-height: normal;
-    margin: 0rem;
-    min-height: 50px;
-    width: 50%;
-    outline: none;
-    padding: 0rem;
-    
+#button-container{
+  display: flex;
+  gap: 1rem;
 }
-#stopButtonVisual{
-  background-color: #000000;
-    border: 2px solid #1A1A1A;
-    border-radius: 15px;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    display: inline-block;
-    font-weight: 600;
-    line-height: normal;
-    margin: 0rem;
-    min-height: 50px;
-    width: 50%;
-    outline: none;
-    padding: 0rem;
-    
-}
+
+
+
