--- a/src/scss/pages/_visual.scss
+++ b/src/scss/pages/_visual.scss
@@ -2,7 +2,7 @@
 display: flex;
 flex-direction: column;
 align-items: center;
-gap: 0.5rem;
+gap: 1rem;
 }
 #timer-container {
   width: 240px;
@@ -20,12 +20,18 @@ gap: 0.5rem;
 }
 
 #timeInput {
+  font-size: 1.5rem;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   text-align: center;
-  gap: 5px;
+  gap: 1rem;
+}
+#duration{
+  font-size: 1rem;
+  padding: 2px;
+  
 }
 
 #button-container{
